--- a/index.html
+++ b/index.html
@@ -3,23 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./public/css/app.css">
     <title>Document</title>
 </head>
 <body>
-    <nav>
-
+    <nav class="nav-bar">
+        <div>
+            <h3 class="tit">Doob</h3>
+        </div>
+        <div class="list">
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact Us</a>
+        </div>
+        <div>
+            <button class="btn1">Contact Us</button>
+        </div>
     </nav>
-    <section>
-
+    <section class="section1">
+        <div class="part1">
+            <h1>The Spirit of<br>digital agency</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>Perferendis voluptas minima deserunt ratione a!</p>
+            <div>
+                <button class="btn2"><strong>More About us</strong></button>
+                <button class="btn3"><strong>Get in Touch</strong></button>
+            </div>
+        </div>
+        <div>
+            <img width="550px" src="./public/images/task.webp" alt="">
+        </div>
     </section>
-    <section>
-
+    <section class="section2">
+        <div class="card1">
+            <h1>Anything you<br>need,we've got<br>you covered</h1>
+            <button class="btn2">Get in Touch</button>
+        </div>
+        <div class="card2">
+            <img width="50px" src="./public/images/icon1.png" alt="####">
+            <h1>web & Graphic<br>Design</h1>
+            <p>Lorem ipsum dolor sit<br>amet consectetur adipisicing<br>elit. Explicabo, veniam.</p>
+        </div>
+        <div class="card2">
+            <img width="50px"  src="./public/images/icon2.png" alt="####">
+            <h1>web & Graphic<br>Design</h1>
+            <p>Lorem ipsum dolor sit<br>amet consectetur adipisicing<br>elit. Explicabo, veniam.</p>
+        </div>
     </section>
     <section>
 
     </section>
     <footer>
-        
+
     </footer>
 </body>
 </html>
