--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./public/css/app.css">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./public/css/app.css">
 </head>
 <body>
     <nav class="nav-bar">
@@ -51,11 +53,39 @@
             <p>Lorem ipsum dolor sit<br>amet consectetur adipisicing<br>elit. Explicabo, veniam.</p>
         </div>
     </section>
-    <section>
-
+    <section class="section3">
+        <div class="contact">
+            <p>contact us</p>
+            <h2> get in touch</h2>
+        </div>
+        <form action="">
+            <div class="input">
+                <input placeholder="Your email" type="email">
+                <input placeholder="sujet" type="subject">
+            </div>
+            <br><textarea placeholder="message here..." cols="60" rows="15" name="" id=""></textarea><br><br>
+            <button class="button">send a message </button>
+        </form>
     </section>
     <footer>
 
+        <div class="footer">
+            <p>DOOB</p>
+            <h2>CREATIVITY ABOVE</h2>
+            <ul>
+                <li>home.</li>
+                <li>about us.</li>
+                <li>portfolio.</li>
+                <li>blog.</li>
+                <li>contact.</li>
+            </ul>
+            @ 2019 - Doob.All Right Reserved
+
+        </div>
+        <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-dribbble"></a>
+ 
     </footer>
 </body>
 </html>
