--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="nav-bar">
-        <div>
+        <div class="h3">
             <h3 class="tit">Doob</h3>
         </div>
         <div class="list">
